--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://serhii-kuzmin.github.io/goit-js-hw-09",
+  "homepage": "https://serhii-kuzmin.github.io/Color-switcher.Countdown-timer.Promise-generator/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
+    "build": "parcel build src/*.html --public-url /Color-switcher.Countdown-timer.Promise-generator/"
   },
   "repository": {
     "type": "git",
